cv-ui/cv-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: cv-ui
  template:
    metadata:
      labels:
        app: cv-ui
    spec:
      containers:
        - image: rryter/cv-reto:latest
          name: cv-ui
          ports:
            - containerPort: 80
