cv-ui/cv-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-ui
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: cv-ui
