cv-ui/cv-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cv.k8s.twy.gmbh
      secretName: cv-tls
  rules:
    - host: cv.k8s.twy.gmbh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cv-ui
                port:
                  number: 80
